add git-logo image

--- a/Skeleton-2.0.4/css/company/company.scss
+++ b/Skeleton-2.0.4/css/company/company.scss
@@ -27,13 +27,19 @@ $gray_blue : #eaf2f4;
 header{
 
   background: $gray_blue;
-
-  #header_in{
-    padding-top: 10px;
-    padding-bottom:4px;
-  }
+  padding-top: 10px;
+  padding-bottom:15px;
+  
+   h1{
+     margin:0px;
+   }
+  
 
   @media (max-width: 550px) {
+    #header_in .container{
+        padding:10px 20px 4px 20px;
+    }
+    
     .logo{
       width: 190px;
     }
@@ -42,7 +48,8 @@ header{
       width:40px;
       float: right;
     }
-  }
+  } //@media (max-width: 550px)
+
 
   .sp_navi_li{
   width: 180px;
@@ -182,10 +189,10 @@ header{
 
 #sub_cover{
   
-  
+  text-align: center;
   padding:80px 0;
   width:100%;
-  height:60px;
+  
   //retina_bg
 
   background-image: url("../../images/top/sub_cover.jpg");
@@ -211,6 +218,7 @@ header{
     font-weight: bold;
     margin: 0;
     letter-spacing: 0.2rem;
+    line-height:40px;
     
     @media(max-width:550px){
     font-size:1.6rem;
@@ -225,30 +233,68 @@ header{
 
 #contents {
     padding-top: 35px;
+    font-family:Meiryo;
+    
+    .row{
+        height:602px;
+        padding-bottom:70px;
+    }
  
    #main{
-       padding-right:20px;
+      
     
-     h2 {
-    color: #42b9d0;
+    th {
+        color:#626262;
+        font-size:14px;
+        font-size:1.4rem;
+        text-align:left;
+        line-height:22.4px;
+        padding:20px 20px 20px 0;
+    }
+    
+    td{
+        color:#626262;
+        font-size:14px;
+        font-size:1.4rem;
+        text-align:left;
+        line-height:22.4px;
+        padding:20px 0;
+    }
+    
+    
+    
+     .company_title {
+    color:rgb(66, 185, 208);
     border-bottom: 3px solid #42b9d0;
-    font-size: 20px;
-    font-size: 2rem;
+    font-size: 15px;
+    font-size: 1.5rem;
     font-weight: 700;
     padding-bottom: 15px;
-   
-
-   
-   
-     @media (min-width: 550px){
-    font-size: 20px;
-    font-size: 2rem;
-    padding-bottom: 20px;
+    margin-bottom:0;
+    line-height:25px;
+     }
     
-       }
-     }//#main h2
+    @media (min-width: 551px){
+     #main th td{
+        padding:20px;
+    }
+    
+   
+     @media (max-width: 550px){
+    .contents{
+        padding-top:20px;
+    }//contents
+    
+   
+    .company_title h2{
+    padding-bottom: 20px;
+       }// company_title h2
+     }//@media (max-width: 550px)
+    
      
    }//main
+   
+}//contentss
 
    li{
      list-style: none; 
@@ -257,10 +303,6 @@ header{
 }//#contents
 
  #sidebar {
-    padding-bottom: 20px;
-    padding-left:15px;
-    margin:0;
-    
     
     .pc_sidemenu {
       
