--- a/Skeleton-2.0.4/css/company/company.css
+++ b/Skeleton-2.0.4/css/company/company.css
@@ -13,11 +13,14 @@ html {
   font-size: 62.5%; }
 
 header {
-  background: #eaf2f4; }
-  header #header_in {
-    padding-top: 10px;
-    padding-bottom: 4px; }
+  background: #eaf2f4;
+  padding-top: 10px;
+  padding-bottom: 15px; }
+  header h1 {
+    margin: 0px; }
   @media (max-width: 550px) {
+    header #header_in .container {
+      padding: 10px 20px 4px 20px; }
     header .logo {
       width: 190px; }
     header .navi {
@@ -104,9 +107,9 @@ header {
       display: none; } }
 
 #sub_cover {
+  text-align: center;
   padding: 80px 0;
   width: 100%;
-  height: 60px;
   background-image: url("../../images/top/sub_cover.jpg");
   background-size: cover; }
   @media (max-width: 550px) {
@@ -122,61 +125,80 @@ header {
     font-size: 3.2rem;
     font-weight: bold;
     margin: 0;
-    letter-spacing: 0.2rem; }
+    letter-spacing: 0.2rem;
+    line-height: 40px; }
     @media (max-width: 550px) {
       #sub_cover h2 {
         font-size: 1.6rem; } }
 
 #contents {
-  padding-top: 35px; }
-  #contents #main {
-    padding-right: 20px; }
-    #contents #main h2 {
-      color: #42b9d0;
-      border-bottom: 3px solid #42b9d0;
-      font-size: 20px;
-      font-size: 2rem;
-      font-weight: 700;
-      padding-bottom: 15px; }
-      @media (min-width: 550px) {
-        #contents #main h2 {
-          font-size: 20px;
-          font-size: 2rem;
-          padding-bottom: 20px; } }
+  padding-top: 35px;
+  font-family: Meiryo; }
+  #contents .row {
+    height: 602px;
+    padding-bottom: 70px; }
+  #contents #main th {
+    color: #626262;
+    font-size: 14px;
+    font-size: 1.4rem;
+    text-align: left;
+    line-height: 22.4px;
+    padding: 20px 20px 20px 0; }
+  #contents #main td {
+    color: #626262;
+    font-size: 14px;
+    font-size: 1.4rem;
+    text-align: left;
+    line-height: 22.4px;
+    padding: 20px 0; }
+  #contents #main .company_title {
+    color: #42b9d0;
+    border-bottom: 3px solid #42b9d0;
+    font-size: 15px;
+    font-size: 1.5rem;
+    font-weight: 700;
+    padding-bottom: 15px;
+    margin-bottom: 0;
+    line-height: 25px; }
+  @media (min-width: 551px) {
+    #contents #main #main th td {
+      padding: 20px; } }
+@media (min-width: 551px) and (max-width: 550px) {
+  #contents #main .contents {
+    padding-top: 20px; }
+  #contents #main .company_title h2 {
+    padding-bottom: 20px; } }
+
   #contents li {
     list-style: none; }
 
-#sidebar {
-  padding-bottom: 20px;
-  padding-left: 15px;
-  margin: 0; }
-  @media (max-width: 550px) {
-    #sidebar .pc_sidemenu {
-      display: none; } }
-  #sidebar .pc_sidemenu h3 {
-    display: block;
-    color: #42b9d0;
-    font-size: 14px;
-    font-size: 1.4rem;
-    letter-spacing: 0.2rem;
-    font-weight: bold;
-    background-color: #f3f9fb;
-    padding: 15px;
-    margin-bottom: 0px; }
-  #sidebar .pc_sidemenu li {
-    list-style: none;
-    display: block;
-    border-bottom: 1px solid #e5e5e5;
-    background-repeat: no-repeat;
-    background-position: 8px center;
-    margin-bottom: 0px;
-    padding: 10px 10px 10px 20px;
-    background-image: url(../../images/top/side_arrow.png);
-    background-size: 4px 8px;
-    font-size: 15px;
-    font-weight: 400px; }
-  #sidebar .pc_sidemenu a {
-    text-decoration: none; }
+@media (max-width: 550px) {
+  #sidebar .pc_sidemenu {
+    display: none; } }
+#sidebar .pc_sidemenu h3 {
+  display: block;
+  color: #42b9d0;
+  font-size: 14px;
+  font-size: 1.4rem;
+  letter-spacing: 0.2rem;
+  font-weight: bold;
+  background-color: #f3f9fb;
+  padding: 15px;
+  margin-bottom: 0px; }
+#sidebar .pc_sidemenu li {
+  list-style: none;
+  display: block;
+  border-bottom: 1px solid #e5e5e5;
+  background-repeat: no-repeat;
+  background-position: 8px center;
+  margin-bottom: 0px;
+  padding: 10px 10px 10px 20px;
+  background-image: url(../../images/top/side_arrow.png);
+  background-size: 4px 8px;
+  font-size: 15px;
+  font-weight: 400px; }
+#sidebar .pc_sidemenu a {
+  text-decoration: none; }
 
 footer {
   background-color: #42b9d0;
