--- a/Skeleton-2.0.4/css/company/company.scss
+++ b/Skeleton-2.0.4/css/company/company.scss
@@ -27,29 +27,34 @@ $gray_blue : #eaf2f4;
 header{
 
   background: $gray_blue;
-  padding-top: 10px;
-  padding-bottom:15px;
+  padding:0;
+  
   
    h1{
      margin:0px;
    }
   
+   #header_in .container{
+    padding-top: 10px;
+    padding-bottom:15px;
+    height:80px;
+  }
 
   @media (max-width: 550px) {
-    #header_in .container{
-        padding:10px 20px 4px 20px;
-    }
     
+     #header_in .container{
+       padding:10px 20px 4px 20px;
+     }
+     
     .logo{
       width: 190px;
     }
-
+    
     .navi{
       width:40px;
       float: right;
     }
-  } //@media (max-width: 550px)
-
+  }
 
   .sp_navi_li{
   width: 180px;
@@ -79,6 +84,7 @@ header{
       }
     }
   } // .sp_navi_li
+  
   @media(min-width:551px){
      .sp_navi{
       display: none;
@@ -174,8 +180,8 @@ header{
       }
       // .li.navi_company a
 
-    }
-    // .pc_navi_li
+    } // .pc_navi_li
+   
   } // @media(min-width:551px)
   
   @media (max-width: 550px) {
