--- a/Skeleton-2.0.4/css/sample.css
+++ b/Skeleton-2.0.4/css/sample.css
@@ -2,11 +2,17 @@ html {
   font-size: 62.5%; }
 
 header {
-  background: #eaf2f4; }
-  header #header_in {
+  background: #eaf2f4;
+  padding: 0; }
+  header h1 {
+    margin: 0px; }
+  header #header_in .container {
     padding-top: 10px;
-    padding-bottom: 4px; }
+    padding-bottom: 15px;
+    height: 80px; }
   @media (max-width: 550px) {
+    header #header_in .container {
+      padding: 10px 20px 4px 20px; }
     header .logo {
       width: 190px; }
     header .navi {
