--- a/Skeleton-2.0.4/css/company/company.css
+++ b/Skeleton-2.0.4/css/company/company.css
@@ -136,7 +136,8 @@ header {
 
 #contents {
   padding-top: 35px;
-  font-family: Meiryo; }
+  font-family: Meiryo;
+  padding-bottom: 70px; }
   #contents .row {
     height: 602px;
     padding-bottom: 70px; }
@@ -157,8 +158,8 @@ header {
   #contents #main .company_title {
     color: #42b9d0;
     border-bottom: 3px solid #42b9d0;
-    font-size: 15px;
-    font-size: 1.5rem;
+    font-size: 20px;
+    font-size: 2rem;
     font-weight: 700;
     padding-bottom: 15px;
     margin-bottom: 0;
