--- a/Skeleton-2.0.4/css/news/news.scss
+++ b/Skeleton-2.0.4/css/news/news.scss
@@ -16,21 +16,26 @@ $gray_blue : #eaf2f4;
 header{
 
   background: $gray_blue;
-  padding:0;
+
   
    h1{
      margin:0px;
    }
   
-   #header_in .container{
+  
+   @media (min-width: 551px) {
+  
+  #header_in.container{
+    
     padding-top: 10px;
     padding-bottom:15px;
-    height:80px;
   }
+  
+   }//header_in .container
 
   @media (max-width: 550px) {
     
-     #header_in .container{
+     #header_in.container{
        padding:10px 20px 4px 20px;
      }
      
