--- a/Skeleton-2.0.4/css/company/company.css
+++ b/Skeleton-2.0.4/css/company/company.css
@@ -17,12 +17,12 @@ header {
   padding: 0; }
   header h1 {
     margin: 0px; }
-  header #header_in .container {
-    padding-top: 10px;
-    padding-bottom: 15px;
-    height: 80px; }
+  @media (min-width: 551px) {
+    header #header_in.container {
+      padding-top: 10px;
+      padding-bottom: 15px; } }
   @media (max-width: 550px) {
-    header #header_in .container {
+    header #header_in.container {
       padding: 10px 20px 4px 20px; }
     header .logo {
       width: 190px; }
