--- a/Skeleton-2.0.4/css/news/news.css
+++ b/Skeleton-2.0.4/css/news/news.css
@@ -2,16 +2,15 @@ html {
   font-size: 62.5%; }
 
 header {
-  background: #eaf2f4;
-  padding: 0; }
+  background: #eaf2f4; }
   header h1 {
     margin: 0px; }
-  header #header_in .container {
-    padding-top: 10px;
-    padding-bottom: 15px;
-    height: 80px; }
+  @media (min-width: 551px) {
+    header #header_in.container {
+      padding-top: 10px;
+      padding-bottom: 15px; } }
   @media (max-width: 550px) {
-    header #header_in .container {
+    header #header_in.container {
       padding: 10px 20px 4px 20px; }
     header .logo {
       width: 190px; }
